// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend [common] example testing should match snapshot(s) for basic 1`] = `
<ul
  className="lucid-Legend lucid-Legend-is-vertical lucid-Legend-has-borders"
>
  <li
    className="lucid-Legend-Item"
    key="0"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-0"
        kind={1}
        x={6}
        y={6}
      />
    </svg>
    Partner 0
  </li>
  <li
    className="lucid-Legend-Item"
    key="1"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-1"
        kind={1}
        x={6}
        y={6}
      />
    </svg>
    Partner 1
  </li>
  <li
    className="lucid-Legend-Item"
    key="2"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-2"
        kind={1}
        x={6}
        y={6}
      />
    </svg>
    Partner 2
  </li>
  <li
    className="lucid-Legend-Item"
    key="3"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-3"
        kind={1}
        x={6}
        y={6}
      />
    </svg>
    Partner 3
  </li>
  <li
    className="lucid-Legend-Item"
    key="4"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-4"
        kind={1}
        x={6}
        y={6}
      />
    </svg>
    Partner 4
  </li>
  <li
    className="lucid-Legend-Item"
    key="5"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-5"
        kind={1}
        x={6}
        y={6}
      />
    </svg>
    Partner 5
  </li>
  <li
    className="lucid-Legend-Item"
    key="6"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-6"
        kind={1}
        x={6}
        y={6}
      />
    </svg>
    Partner 6
  </li>
</ul>
`;

exports[`Legend [common] example testing should match snapshot(s) for basic 2`] = `
<ul
  className="lucid-Legend lucid-Legend-is-vertical lucid-Legend-has-borders"
>
  <li
    className="lucid-Legend-Item"
    key="0"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-0"
        kind={0}
        x={6}
        y={6}
      />
    </svg>
    Partner 0
  </li>
  <li
    className="lucid-Legend-Item"
    key="1"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-1"
        kind={1}
        x={6}
        y={6}
      />
    </svg>
    Partner 1
  </li>
  <li
    className="lucid-Legend-Item"
    key="2"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-2"
        kind={2}
        x={6}
        y={6}
      />
    </svg>
    Partner 2
  </li>
  <li
    className="lucid-Legend-Item"
    key="3"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-3"
        kind={3}
        x={6}
        y={6}
      />
    </svg>
    Partner 3
  </li>
  <li
    className="lucid-Legend-Item"
    key="4"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-4"
        kind={4}
        x={6}
        y={6}
      />
    </svg>
    Partner 4
  </li>
  <li
    className="lucid-Legend-Item"
    key="5"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-5"
        kind={5}
        x={6}
        y={6}
      />
    </svg>
    Partner 5
  </li>
  <li
    className="lucid-Legend-Item"
    key="6"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-6"
        kind={6}
        x={6}
        y={6}
      />
    </svg>
    Partner 6
  </li>
</ul>
`;

exports[`Legend [common] example testing should match snapshot(s) for basic 3`] = `
<ul
  className="lucid-Legend lucid-Legend-is-vertical lucid-Legend-has-borders"
>
  <li
    className="lucid-Legend-Item"
    key="0"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-0"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 0
  </li>
  <li
    className="lucid-Legend-Item"
    key="1"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-1"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 1
  </li>
  <li
    className="lucid-Legend-Item"
    key="2"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-2"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 2
  </li>
  <li
    className="lucid-Legend-Item"
    key="3"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-3"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 3
  </li>
  <li
    className="lucid-Legend-Item"
    key="4"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-4"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 4
  </li>
  <li
    className="lucid-Legend-Item"
    key="5"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-5"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 5
  </li>
  <li
    className="lucid-Legend-Item"
    key="6"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-6"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 6
  </li>
</ul>
`;

exports[`Legend [common] example testing should match snapshot(s) for basic 4`] = `
<ul
  className="lucid-Legend lucid-Legend-is-vertical lucid-Legend-has-borders"
>
  <li
    className="lucid-Legend-Item"
    key="0"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-0"
        kind={0}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-0"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 0
  </li>
  <li
    className="lucid-Legend-Item"
    key="1"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-1"
        kind={1}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-1"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 1
  </li>
  <li
    className="lucid-Legend-Item"
    key="2"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-2"
        kind={2}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-2"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 2
  </li>
  <li
    className="lucid-Legend-Item"
    key="3"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-3"
        kind={3}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-3"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 3
  </li>
  <li
    className="lucid-Legend-Item"
    key="4"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-4"
        kind={4}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-4"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 4
  </li>
  <li
    className="lucid-Legend-Item"
    key="5"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-5"
        kind={5}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-5"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 5
  </li>
  <li
    className="lucid-Legend-Item"
    key="6"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-6"
        kind={6}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-6"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 6
  </li>
</ul>
`;

exports[`Legend [common] example testing should match snapshot(s) for basic 5`] = `
<ul
  className="lucid-Legend lucid-Legend-is-vertical lucid-Legend-has-borders lucid-Legend-is-reversed"
>
  <li
    className="lucid-Legend-Item"
    key="0"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-0"
        kind={0}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-0"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 0
  </li>
  <li
    className="lucid-Legend-Item"
    key="1"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-1"
        kind={1}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-1"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 1
  </li>
  <li
    className="lucid-Legend-Item"
    key="2"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-2"
        kind={2}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-2"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 2
  </li>
  <li
    className="lucid-Legend-Item"
    key="3"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-3"
        kind={3}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-3"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 3
  </li>
  <li
    className="lucid-Legend-Item"
    key="4"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-4"
        kind={4}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-4"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 4
  </li>
  <li
    className="lucid-Legend-Item"
    key="5"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-5"
        kind={5}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-5"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 5
  </li>
  <li
    className="lucid-Legend-Item"
    key="6"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-6"
        kind={6}
        x={11}
        y={6}
      />
      <Line
        color="color-chart-6"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Partner 6
  </li>
</ul>
`;

exports[`Legend [common] example testing should match snapshot(s) for basic 6`] = `
<ul
  className="lucid-Legend lucid-Legend-is-horizontal lucid-Legend-has-borders"
>
  <li
    className="lucid-Legend-Item"
    key="0"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-good"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Revenue
  </li>
  <li
    className="lucid-Legend-Item"
    key="1"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-bad"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Loss
  </li>
  <li
    className="lucid-Legend-Item"
    key="2"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-0"
        kind={1}
        x={6}
        y={6}
      />
    </svg>
    Partner 0
  </li>
  <li
    className="lucid-Legend-Item"
    key="3"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-1"
        kind={1}
        x={6}
        y={6}
      />
    </svg>
    Partner 1
  </li>
</ul>
`;

exports[`Legend [common] example testing should match snapshot(s) for basic 7`] = `
<ul
  className="lucid-Legend lucid-Legend-is-horizontal lucid-Legend-has-borders lucid-Legend-is-reversed"
>
  <li
    className="lucid-Legend-Item"
    key="0"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-good"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Revenue
  </li>
  <li
    className="lucid-Legend-Item"
    key="1"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-bad"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Loss
  </li>
  <li
    className="lucid-Legend-Item"
    key="2"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-0"
        kind={1}
        x={6}
        y={6}
      />
    </svg>
    Partner 0
  </li>
  <li
    className="lucid-Legend-Item"
    key="3"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={12}
    >
      <Point
        color="color-chart-1"
        kind={1}
        x={6}
        y={6}
      />
    </svg>
    Partner 1
  </li>
</ul>
`;

exports[`Legend [common] example testing should match snapshot(s) for basic 8`] = `
<ul
  className="lucid-Legend lucid-Legend-is-vertical lucid-Legend-has-borders"
>
  <li
    className="lucid-Legend-Item"
    key="0"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-good"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Revenue
  </li>
  <li
    className="lucid-Legend-Item"
    key="1"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-bad"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Loss
  </li>
  <li
    className="lucid-Legend-Item"
    key="2"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-0"
        kind={1}
        x={11}
        y={6}
      />
    </svg>
    Partner 0
  </li>
  <li
    className="lucid-Legend-Item"
    key="3"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-1"
        kind={1}
        x={11}
        y={6}
      />
    </svg>
    Partner 1
  </li>
</ul>
`;

exports[`Legend [common] example testing should match snapshot(s) for basic 9`] = `
<ul
  className="lucid-Legend lucid-Legend-is-vertical"
>
  <li
    className="lucid-Legend-Item"
    key="0"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-good"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Revenue
  </li>
  <li
    className="lucid-Legend-Item"
    key="1"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Line
        color="color-chart-bad"
        d="M0,6 L22,6"
        isDotted={false}
      />
    </svg>
    Loss
  </li>
  <li
    className="lucid-Legend-Item"
    key="2"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-0"
        kind={1}
        x={11}
        y={6}
      />
    </svg>
    Partner 0
  </li>
  <li
    className="lucid-Legend-Item"
    key="3"
    onClick={[Function]}
  >
    <svg
      className="lucid-Legend-Item-indicator"
      height={12}
      width={22}
    >
      <Point
        color="color-chart-1"
        kind={1}
        x={11}
        y={6}
      />
    </svg>
    Partner 1
  </li>
</ul>
`;
